--- a/index.html
+++ b/index.html
@@ -34,5 +34,14 @@
   <body class="bg-gray-50 text-gray-900 antialiased">
     <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HMKSMHEQ7D"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-HMKSMHEQ7D');
+  </script>
 </body>
 </html>
